@@ -3,6 +3,10 @@ Changes in @NEW@:
     * Clone/promote no longer complains when a buildreq is not also being
       cloned to the new location. (CNY-1844)
 
+  o Bug Fixes:
+    * Bootstrapping python can now find system conary when using the
+      bootstrapped python to determine python dependencies. (CNY-2001)
+
 Changes in 1.1.94:
   o Bug Fixes:
     * Python extension modules installed at the top level of the Python
